Fix No10 header image card w/ image margins & width
The image card should work without an image but on mobile the margins aren't correctly set (there is extra margin added on mobile and the card has a contrained width, presumably to accomodate an image which shouldn't happen without an image).

We should investigate this bug separately and add a fix to the gem for it when we're confident that we understand all the use cases for the image card without image as the current behaviour could be serving a particular use case.

--- a/app/assets/stylesheets/views/_organisations.scss
+++ b/app/assets/stylesheets/views/_organisations.scss
@@ -60,3 +60,14 @@
   left: govuk-spacing(4);
   padding-right: govuk-spacing(3);
 }
+
+.organisation__no10-header__cards {
+  .gem-c-image-card {
+    margin: 0 0 govuk-spacing(6) 0;
+  }
+
+  .gem-c-image-card__text-wrapper {
+    padding: 0;
+    width: auto;
+  }
+}
